@@ -183,9 +183,12 @@ pop_path_from_include_path (void)
 }
 
 /* Find and load the file named FILENAME.  Return a pointer to
-   the loaded file, or NULL if it can't be loaded. */
+   the loaded file, or NULL if it can't be loaded.  If USE_PATH is zero,
+   just look for the given file (this is used in handle_delayed_writes),
+   else search along include_files_path.   */
+
 char *
-find_and_load (char *filename)
+find_and_load (char *filename, int use_path)
 {
   struct stat fileinfo;
   long file_size;
@@ -195,7 +198,9 @@ find_and_load (char *filename)
 
   result = fullpath = NULL;
 
-  fullpath = get_file_info_in_path (filename, include_files_path, &fileinfo);
+  fullpath
+    = get_file_info_in_path (filename, use_path ? include_files_path : NULL, 
+                             &fileinfo);
 
   if (!fullpath)
     goto error_exit;
@@ -682,7 +687,7 @@ handle_delayed_writes (void)
 
   while (temp)
     {
-      delayed_buf = find_and_load (temp->filename);
+      delayed_buf = find_and_load (temp->filename, 0);
 
       if (output_paragraph_offset > 0)
         {
